***********************************
CHANGES IN VERSION 1.7.4

NEW FEATURES

SIGNIFICANT USER-VISIBLE CHANGES

   o Change the parameters of getAnnotatedRestrictionSites and setGenomicFeatures fucntions
  o Update of the setGenomicAnnotation function to fit with the original HiCNorm method

BUG FIXES

  o isSymmetrix - NA values
  o Bug in definition of upstream and downstream flanking region for a restriction site in getAnnotatedRestrictionSites

***********************************
CHANGES IN VERSION 1.7.3

NEW FEATURES
   
   o Add new normalization method for Hi-C data from Hu et al (HiCNorm). This method is based on linear regression model between interaction counts and sources of bias such as GC content, mappability, fragment length, etc. See normLGF(), setGenomicFeatures(), getAnnotatedRestrictionSites().

   o Add new normalization method for Hi-C data from Imakaev et al.(ICE). The ICE procedure is an iterative normalization method used to remove any bias from HiC data.

   o Add 'summary' method for HTCexp and HTClist objects

SIGNIFICANT USER-VISIBLE CHANGES

   o Improve quality control methods based using sparse data

   o Change method option for normPerTrans methods. The 'mean' method is in fact a 'max' method

   o Update of the export.my5C list format

BUG FIXES

   o max (na.rm=TRUE) in mapC function

***********************************
CHANGES IN VERSION 1.5.2

NEW FEATURES

    o Efficient memory matrix representation using the Matrix package. The memory usage for big sparse matrix is improved by a factor 7. However, some operation are much slower based on the Matrix implementation. Thus, for some task as the plotting function, the Matrix are converted in standard matrix based object

    o 'show' and 'detail' method for HTClist object

    o 'c(x, ...)' method for HTCexp and HTClist objects

SIGNIFICANT USER-VISIBLE CHANGES

    o The option mask.data from the mapC function is deprecated
